kick menu toggle au profit de tabs

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,3 +2,13 @@ page-home {
     
 
 }
+
+.textCentre{
+    text-align: center;
+}
+
+.buttonCentre{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
