--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,3 +12,10 @@ page-home {
     margin-left: auto;
     margin-right: auto;
 }
+
+.imageGrande{
+    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
